Fix for results table

--- a/report/report.tex
+++ b/report/report.tex
@@ -317,7 +317,7 @@ The results after training with synthetic data are in Table-\ref{tab:RawEstimate
 	\hline
 	Washer \& Dryer & 566.0  & 0.02160  & 72.2\% & 1357.28 & 3222.5  \\ % Is house 1 channel 20
 	\hline
-	Oven & 287.830 & N/A & 1.2\% & 1103.43 & 1710.0  \\ % Is house 1 channel 3
+	Oven & 287.830 & 0.0196 & 1.2\% & 1103.43 & 1710.0  \\ % Is house 1 channel 3
 	\hline
 	Lighting & 91.181 & 0.6547 & 78.6\% & 95.631  & 2246.0  \\ % Is house 2 channel 9
 	\hline
