--- a/report/report.tex
+++ b/report/report.tex
@@ -444,6 +444,11 @@ Additionally, investigation into improved data synthesis algorithms or generativ
 
 Another possible extension to this project would be to add more information to the input of the neural network, such as the time of day and day of the week of the input window since certain appliances are more likely to be activated at certain times. Another option would be to find a way to include the information of what the mean of the input window was while still standardizing each input window by subtracting its mean\cite{Kelly}, perhaps by standardizing the power consumption used as the input and then adding the mean as a single number at the end of the input. However, it is not easy to see where the best place to insert this information into the denoising autoencoder architecture would be. Some experimentation would likely be necessary to find an architecture that made effective use of the new information.
 
+As mentioned earlier, generative models such as hidden Markov models seem to be the state-of-the-art for the NILM task \cite{Kolter}\cite{Parson}.
+Hidden Markov models would allow us to intuitively model changing device states over time, and would also be useful for generating additional synthetic training data.
+Due to time constraints, we were unable to also investigate how well these models perform given our pre-processed device power consumptions.
+This avenue of research is still completely open, and seems likely to yield good results.
+
 % Generate the bibliography.
 
 \bibliography{biblio}
