--- a/report/report.tex
+++ b/report/report.tex
@@ -224,19 +224,12 @@ identify the refrigerator being active in all time steps we get a optimal recall
 \[ \textrm{Precision} = \frac{\textrm{Number of true positive elements}}{\textrm{Number of elements identified as positives}}  \]
 \[ \textrm{Recall} = \frac{\textrm{Number of true positives}}{\textrm{Number of elements that are indeed positive}}  \]
 \[ \textrm{F1-Score} = \frac{2 \cdot \textrm{Precision} \cdot \textrm{Recall}}{\textrm{Precision} + \textrm{Recall}}\]
-For the second question we are interested in the error per timestep and to generate an acuuracy-like value. Therefore we
+For the second question we are interested in the error per timestep. Therefore we
 compare the disaggregated energy consumptions per device with the actual device's consumption we have from the REDD
-dataset. Following \cite{Redd} we can compute the accuracy depending on the summed absolute deviation in relation to 
-the overall consumption:
-\[\textrm{Accuracy}_{abs} = 1- \frac{\sum^{T}_{t=1}\sum^{N}_{n=1}|\hat{y}^{(n)}_t-y^{(n)}_t|}{2 \sum^{T}_{t=1}Y_t} .  \]
-The error per timestep can be similarly described as the absolute error:
-\[\textrm{ASE} = \frac{\sum^{T}_{t=1}\sum^{N}_{n=1}|\hat{y}^{(n)}_t-y^{(n)}_t|}{T \cdot n} .  \]
-While the absolute error weights all differences regardless of their size the same, we also want information about the accuracy when 
-weighting bigger deviations higher than smaller ones. We use the root squared error instead of the squared error 
-to stay within the same unit. Therefore we calculate the root mean squared error as the error per timestep and similarly a respective 
-accuracy as the ratio with summed up overall consumption.
+dataset. 
+To weight bigger deviations higher than smaller ones, we square the differences and use the root mean squared error instead of the mean squared error to stay within the same unit and thereby comparable. Since we are interested in the error over all devices and timesteps we average over the number of devices and the length of our timeseries
 \[\textrm{RMSE} = \sqrt{\frac{\sum^{T}_{t=1}\sum^{N}_{n=1}(\hat{y}^{(n)}_t-y^{(n)}_t)^2}{T \cdot n}} .  \]
-\[\textrm{Accuracy}_{rse} = 1- \frac{\sqrt{\sum^{T}_{t=1}\sum^{N}_{n=1}(\hat{y}^{(n)}_t-y^{(n)}_t)^2}}{2 \sum^{T}_{t=1}Y_t} .  \]
+
 
 
 \subsection{Implementation}
@@ -438,16 +431,10 @@ table
 \end{figure}
 
 \subsection{Future Work}
-The simplest direction for future work is to continue to tweak the current network, and see how well it does when trained against a larger dataset.
-One potential dataset is UK-DALE \cite{Kelly2}, which measures the power usage from 5 homes with a duration up to 655 days, which is much longer than REDD \cite{Redd}, which was measured over approximately 14 days.
-Additionally, investigation into improved data synthesis algorithms or generative models are likely to yield performance increases, by allowing us to generate additional data for the network to train on, potentially targeting scenarios of device usage which did not occur in the dataset.
+
+HMM depending on how well that goes
 
 Another possible extension to this project would be to add more information to the input of the neural network, such as the time of day and day of the week of the input window since certain appliances are more likely to be activated at certain times. Another option would be to find a way to include the information of what the mean of the input window was while still standardizing each input window by subtracting its mean\cite{Kelly}, perhaps by standardizing the power consumption used as the input and then adding the mean as a single number at the end of the input. However, it is not easy to see where the best place to insert this information into the denoising autoencoder architecture would be. Some experimentation would likely be necessary to find an architecture that made effective use of the new information.
-
-As mentioned earlier, generative models such as hidden Markov models seem to be the state-of-the-art for the NILM task \cite{Kolter}\cite{Parson}.
-Hidden Markov models would allow us to intuitively model changing device states over time, and would also be useful for generating additional synthetic training data.
-Due to time constraints, we were unable to also investigate how well these models perform given our pre-processed device power consumptions.
-This avenue of research is still completely open, and seems likely to yield good results.
 
 % Generate the bibliography.
 
