Adds the abstract

--- a/report/report.tex
+++ b/report/report.tex
@@ -33,8 +33,8 @@
 \maketitle
 
 \begin{abstract}
-Whatever we exactly did. Something about how, for Internet of Things, device on/off is more readily available
-Would be very useful if could train off it combined with the aggregated data, rather than also using the disaggregated data or taking an unsupervised approach.
+Energy disaggregation is the process of generating estimates of per-appliance power consumption from aggregated power consumption data showing the power usage of an entire building. This paper takes the unusual approach of trying to disaggregate power consumption using only binary indicators of whether applainces were on or off in the training phase rather than the actual disaggregate data. Two preprocessing methods on the aggregated power consumption and the binary indicators were used to generate an approximation of the disaggregated, per-device power consumption which was used to train a denoising autoencoder, a type of neural network. We present a comparison of the two preprocessing methods and the performance of the neural nework when trained on data generated from them or the actual disaggregated data with the goal of demonstrating whether the loss of information from using just the indicators seriously affects the performance of the neural network.
+
 \end{abstract}
 
 NOTE: Needs to be cleaned up now
