--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -5,6 +5,13 @@
 	institution = "University of Oxford Environmental Change Institute"
 }
 
+@book{ Lawler,
+	author = "Gregory Lawler",
+	title = "Introduction to Stochastic Processes",
+	year = "2006",
+	publisher = "Chapman and Hall/CRC"
+}
+
 @article{ Kelly,
 	author = "Jack Kelly and William Knottenbelt",
 	title = "Neural NILM: Deep Neural Networks Applied to Energy Disaggregation",
